[gd_scene load_steps=2 format=1]

[ext_resource path="res://Game/ActionSensor/ActionSensor.gd" type="Script" id=1]

[node name="ActionSensor" type="PanelContainer"]

visibility/self_opacity = 0.5
visibility/blend_mode = 2
anchor/right = 1
anchor/bottom = 1
rect/min_size = Vector2( 0, 135 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 16.0
margin/top = 450.0
margin/right = 16.0
margin/bottom = 15.0
script/script = ExtResource( 1 )

[node name="Input" type="HBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 7.0
margin/top = 7.0
margin/right = 985.0
margin/bottom = 138.0
alignment = 0

[node name="Movement" type="VBoxContainer" parent="Input"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 103.0
margin/bottom = 131.0
alignment = 0

[node name="StepPad" type="GridContainer" parent="Input/Movement"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 103.0
margin/bottom = 100.0
custom_constants/vseparation = 2
custom_constants/hseparation = 2
columns = 3

[node name="NW" type="Button" parent="Input/Movement/StepPad"]

rect/min_size = Vector2( 32, 32 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 35.0
margin/bottom = 32.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "NW"
flat = false

[node name="N" type="Button" parent="Input/Movement/StepPad"]

rect/min_size = Vector2( 32, 32 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 37.0
margin/top = 0.0
margin/right = 69.0
margin/bottom = 32.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "N"
flat = false

[node name="NE" type="Button" parent="Input/Movement/StepPad"]

rect/min_size = Vector2( 32, 32 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 71.0
margin/top = 0.0
margin/right = 103.0
margin/bottom = 32.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "NE"
flat = false

[node name="W" type="Button" parent="Input/Movement/StepPad"]

rect/min_size = Vector2( 32, 32 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 34.0
margin/right = 35.0
margin/bottom = 66.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "W"
flat = false

[node name="Null" type="Button" parent="Input/Movement/StepPad"]

rect/min_size = Vector2( 32, 32 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 37.0
margin/top = 34.0
margin/right = 69.0
margin/bottom = 66.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "0"
flat = false

[node name="E" type="Button" parent="Input/Movement/StepPad"]

rect/min_size = Vector2( 32, 32 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 71.0
margin/top = 34.0
margin/right = 103.0
margin/bottom = 66.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "E"
flat = false

[node name="SW" type="Button" parent="Input/Movement/StepPad"]

rect/min_size = Vector2( 32, 32 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 68.0
margin/right = 35.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "SW"
flat = false

[node name="S" type="Button" parent="Input/Movement/StepPad"]

rect/min_size = Vector2( 32, 32 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 37.0
margin/top = 68.0
margin/right = 69.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "S"
flat = false

[node name="SE" type="Button" parent="Input/Movement/StepPad"]

rect/min_size = Vector2( 32, 32 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 71.0
margin/top = 68.0
margin/right = 103.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "SE"
flat = false

[node name="HSeparator" type="HSeparator" parent="Input/Movement"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 104.0
margin/right = 103.0
margin/bottom = 107.0

[node name="Points" type="HBoxContainer" parent="Input/Movement"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 111.0
margin/right = 103.0
margin/bottom = 131.0
alignment = 0

[node name="Undo" type="Button" parent="Input/Movement/Points"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 28.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "<<"
flat = false

[node name="MovementBar" type="ProgressBar" parent="Input/Movement/Points"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 32.0
margin/top = 0.0
margin/right = 103.0
margin/bottom = 20.0
range/min = 0.0
range/max = 8.0
range/step = 1.0
range/page = 0.0
range/value = 5.0
range/exp_edit = false
range/rounded = false
percent/visible = false

[node name="Value" type="Label" parent="Input/Movement/Points/MovementBar"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
text = "5/8"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="VSeparator" type="VSeparator" parent="Input"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 107.0
margin/top = 0.0
margin/right = 110.0
margin/bottom = 131.0

[node name="Done" type="Button" parent="Input"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 114.0
margin/top = 0.0
margin/right = 164.0
margin/bottom = 131.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "DONE"
flat = false

[node name="VSeparator1" type="VSeparator" parent="Input"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 168.0
margin/top = 0.0
margin/right = 171.0
margin/bottom = 131.0

[node name="Standard" type="GridContainer" parent="Input"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
size_flags/stretch_ratio = 3.0
margin/left = 175.0
margin/top = 0.0
margin/right = 774.0
margin/bottom = 131.0
columns = 2

[node name="Attack" type="Button" parent="Input/Standard"]

rect/min_size = Vector2( 0, 16 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 299.0
margin/bottom = 29.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Attack"
flat = false

[node name="Cast" type="Button" parent="Input/Standard"]

rect/min_size = Vector2( 0, 16 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 303.0
margin/top = 0.0
margin/right = 598.0
margin/bottom = 29.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Cast Spell"
flat = false

[node name="Use" type="Button" parent="Input/Standard"]

rect/min_size = Vector2( 0, 16 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 33.0
margin/right = 299.0
margin/bottom = 62.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Use Item"
flat = false

[node name="Dash" type="Button" parent="Input/Standard"]

rect/min_size = Vector2( 0, 16 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 303.0
margin/top = 33.0
margin/right = 598.0
margin/bottom = 62.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Dash"
flat = false

[node name="Disengage" type="Button" parent="Input/Standard"]

rect/min_size = Vector2( 0, 16 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 66.0
margin/right = 299.0
margin/bottom = 95.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Disengage"
flat = false

[node name="Hide" type="Button" parent="Input/Standard"]

rect/min_size = Vector2( 0, 16 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 303.0
margin/top = 66.0
margin/right = 598.0
margin/bottom = 95.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Hide"
flat = false

[node name="Aid" type="Button" parent="Input/Standard"]

rect/min_size = Vector2( 0, 16 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 99.0
margin/right = 299.0
margin/bottom = 128.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Aid"
flat = false

[node name="Active" type="PanelContainer" parent="Input"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 778.0
margin/top = 0.0
margin/right = 978.0
margin/bottom = 131.0

[node name="box" type="VBoxContainer" parent="Input/Active"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 7.0
margin/top = 7.0
margin/right = 193.0
margin/bottom = 124.0
alignment = 0

[node name="Name" type="Label" parent="Input/Active/box"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 186.0
margin/bottom = 14.0
text = "[Name]"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HP" type="HBoxContainer" parent="Input/Active/box"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 18.0
margin/right = 186.0
margin/bottom = 32.0
alignment = 1

[node name="Label" type="Label" parent="Input/Active/box/HP"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 67.0
margin/top = 0.0
margin/right = 85.0
margin/bottom = 14.0
text = "HP"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Now" type="Label" parent="Input/Active/box/HP"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 89.0
margin/top = 0.0
margin/right = 97.0
margin/bottom = 14.0
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="slash" type="Label" parent="Input/Active/box/HP"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 101.0
margin/top = 0.0
margin/right = 106.0
margin/bottom = 14.0
text = "/"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Max" type="Label" parent="Input/Active/box/HP"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 110.0
margin/top = 0.0
margin/right = 118.0
margin/bottom = 14.0
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AC" type="HBoxContainer" parent="Input/Active/box"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 36.0
margin/right = 186.0
margin/bottom = 50.0
alignment = 1

[node name="Label" type="Label" parent="Input/Active/box/AC"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 78.0
margin/top = 0.0
margin/right = 95.0
margin/bottom = 14.0
text = "AC"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Now" type="Label" parent="Input/Active/box/AC"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 99.0
margin/top = 0.0
margin/right = 107.0
margin/bottom = 14.0
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="InfoButton" type="Button" parent="Input/Active/box"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 54.0
margin/right = 186.0
margin/bottom = 117.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "INFO"
flat = false


